Studio1 Fixed Mobile
header didn't fit

--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -116,7 +116,8 @@ a:hover {
     padding-top: 5%;
   }
   h1{
-    font-size: 1.7em;
+    font-size: 1.5em;
+    margin-bottom: 7%;
   }
   article {
     width: 100%;
